fix: fix problems with image's name white spaces in the url; feat: add basic mixin template for media queries; fix: fix problems with container padding for predefind device types, fix problem with image dimensions in the not-only section (make it responsive)

--- a/shelter/Pets/style.css
+++ b/shelter/Pets/style.css
@@ -433,8 +433,22 @@ img {
 }
 
 .container {
-  max-width: 1200px;
   margin: 0 auto;
+}
+@media (max-width: 1280px) {
+  .container {
+    padding: 0 40px;
+  }
+}
+@media (max-width: 768px) {
+  .container {
+    padding: 0 30px;
+  }
+}
+@media (max-width: 320px) {
+  .container {
+    padding: 0 10px;
+  }
 }
 
 .hidden {
