--- a/shelter/src/sass/abstracts/_constants.scss
+++ b/shelter/src/sass/abstracts/_constants.scss
@@ -23,3 +23,7 @@ $color-primary-light: #FDDCC4;
 $width-desktop: 1280px;
 $width-tablet: 768px;
 $width-mobile: 320px;
+
+$content-width-desktop: 1200px;
+$content-width-tablet: 708px;
+$content-width-mobile: 300px;
